[tool.poetry]

name = "destroy-asteroids"
version = "0.1.0"
description = "Spaceship game with pygame library"
authors = ["Luan <luanbsilveira23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
